source/k8s/k8s.service.api.istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-identityserver
spec:
  type: NodePort
  ports:
  - name: identityserver
    protocol: TCP
    port: 80
  selector:
    app: microservice-identityserver
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: microservice-identityserver
spec:
  minReadySeconds: 10
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"666176cf119f5520023f04b79663e0d1ebeaf2aece1864b5abf1547879b22129","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: microservice-identityserver
    spec:
      containers:
      - args:
        - -c
        - dotnet /app/Microservice.IdentityServer.dll
        command:
        - /bin/bash
        image: khainx127/microservice.identityserver
        name: microservice-identityserver
        ports:
        - containerPort: 80
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - microservice-identityserver
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15007
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-statsd-prom-bridge.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: gcr.io/istio-release/proxyv2:1.0.2
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources:
          requests:
            cpu: 10m
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-logging-api
spec:
  type: ClusterIP
  ports:
  - name: logging-api
    protocol: TCP
    port: 80
    targetPort: 30002
  selector:
    app: microservice-logging-api
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: microservice-logging-api
spec:
  minReadySeconds: 10
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"666176cf119f5520023f04b79663e0d1ebeaf2aece1864b5abf1547879b22129","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: microservice-logging-api
    spec:
      containers:
      - args:
        - -c
        - dotnet /app/Microservice.Logging.API.dll
        command:
        - /bin/bash
        image: khainx127/microservice.logging.api
        name: microservice-logging-api
        ports:
        - containerPort: 80
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - microservice-logging-api
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15007
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-statsd-prom-bridge.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: gcr.io/istio-release/proxyv2:1.0.2
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources:
          requests:
            cpu: 10m
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-logging-background
spec:
  type: ClusterIP
  ports:
  - name: logging-api
    protocol: TCP
    port: 80
  selector:
    app: microservice-logging-background
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: microservice-logging-background
spec:
  minReadySeconds: 10
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"666176cf119f5520023f04b79663e0d1ebeaf2aece1864b5abf1547879b22129","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: microservice-logging-background
    spec:
      containers:
      - args:
        - -c
        - dotnet /app/Microservice.Logging.BackgroundProcess.dll
        command:
        - /bin/bash
        image: khainx127/microservice.logging.background
        name: microservice-logging-background
        ports:
        - containerPort: 80
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - microservice-logging-background
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15007
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-statsd-prom-bridge.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: gcr.io/istio-release/proxyv2:1.0.2
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources:
          requests:
            cpu: 10m
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-notification-background
spec:
  type: ClusterIP
  ports:
  - name: logging-api
    protocol: TCP
    port: 80
  selector:
    app: microservice-notification-background
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: microservice-notification-background
spec:
  minReadySeconds: 10
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"666176cf119f5520023f04b79663e0d1ebeaf2aece1864b5abf1547879b22129","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: microservice-notification-background
    spec:
      containers:
      - args:
        - -c
        - dotnet /app/Microservice.Notification.BackgroundProcess.dll
        command:
        - /bin/bash
        image: khainx127/microservice.notification.background
        name: microservice-notification-background
        ports:
        - containerPort: 80
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - microservice-notification-background
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15007
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-statsd-prom-bridge.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: gcr.io/istio-release/proxyv2:1.0.2
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources:
          requests:
            cpu: 10m
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      dnsConfig:
        nameservers:
        - 8.8.8.8
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ezstore-product-api
spec:
  type: NodePort
  ports:
  - name: ezstore-product-api
    protocol: TCP
    port: 80
  selector:
    app: ezstore-product-api
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: ezstore-product-api
spec:
  minReadySeconds: 10
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"666176cf119f5520023f04b79663e0d1ebeaf2aece1864b5abf1547879b22129","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: ezstore-product-api
    spec:
      containers:
      - args:
        - -c
        - dotnet /app/ezStore.Product.API.dll
        command:
        - /bin/bash
        image: khainx127/ezstore.product.api
        name: ezstore-product-api
        ports:
        - containerPort: 80
        resources: {}
      - args:
        - proxy
        - sidecar
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - ezstore-product-api
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15007
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-statsd-prom-bridge.istio-system:9125
        - --proxyAdminPort
        - "15000"
        - --controlPlaneAuthPolicy
        - NONE
        image: gcr.io/istio-release/proxyv2:1.0.2
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources:
          requests:
            cpu: 10m
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
