source/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-identityserver-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 40101
      name: http
      protocol: HTTP
    hosts:
    - "microservices.identityserver"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-identityserver
spec:
  hosts:
  - "microservices.identityserver"
  gateways:
  - microservices-identityserver-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: microservices-identityserver
        port:
          number: 80
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-logging-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 30102
      name: http
      protocol: HTTP
    hosts:
    - "microservices.logging"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-logging
spec:
  hosts:
  - "microservices.logging"
  gateways:
  - microservices-logging-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: microservices-logging
        port:
          number: 80
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-settings-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 30103
      name: http
      protocol: HTTP
    hosts:
    - "microservices.settings"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-settings
spec:
  hosts:
  - "microservices.settings"
  gateways:
  - microservices-settings-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: microservices-settings
        port:
          number: 80
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ezstore-order-api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 30201
      name: http
      protocol: HTTP
    hosts:
    - "ezstore.orderapi"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ezstore-order-api
spec:
  hosts:
  - "ezstore.orderapi"
  gateways:
  - ezstore-order-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ezstore-order-api
        port:
          number: 80
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ezstore-payment-api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 30202
      name: http
      protocol: HTTP
    hosts:
    - "ezstore.paymentapi"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ezstore-payment-api
spec:
  hosts:
  - "ezstore.paymentapi"
  gateways:
  - ezstore-payment-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ezstore-payment-api
        port:
          number: 80
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ezstore-product-api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 30203
      name: http
      protocol: HTTP
    hosts:
    - "ezstore.productapi"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ezstore-product-api
spec:
  hosts:
  - "ezstore.productapi"
  gateways:
  - ezstore-product-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ezstore-product-api
        port:
          number: 80
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ezstore-warehouse-api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 30204
      name: http
      protocol: HTTP
    hosts:
    - "ezstore.warehouseapi"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ezstore-warehouse-api
spec:
  hosts:
  - "ezstore.warehouseapi"
  gateways:
  - ezstore-warehouse-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ezstore-warehouse-api
        port:
          number: 80
---
